--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
 author:
   name   : "johnny gainer"
   avatar : "https://raw.githubusercontent.com/johnnygainer/johnnygainer.github.io/master/assets/images/KICX0088.png"
-  bio    : "teaching//writing//musing"
+  bio    : "Johnny gainer is a professor and researcher at Villanova University and an editor for Capacious Journal for Emerging Affect Inquiry and Imbricate! Press"
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
@@ -69,6 +69,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/johnnygainer"
+      label: "Bear Blog"
+      icon: "🐼"
+      url: "https://johnnygainer.bearblog.dev/"
     
 
 #footer:
