--- a/_config.yml
+++ b/_config.yml
@@ -60,15 +60,12 @@ author:
   avatar : "https://raw.githubusercontent.com/johnnygainer/johnnygainer.github.io/master/assets/images/KICX0088.png"
   bio    : "Johnny gainer is a professor and researcher at Villanova University and an editor for [Capacious Journal for Emerging Affect Inquiry](http://capaciousjournal.com/) and Imbricate! Press"
   links:
+    - label: "Photography"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://www.instagram.com/johnny_gainer/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/JohnnyGainer"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/johnny_gainer/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/johnnygainer"
       label: "Bear Blog"
       icon: "🐼"
       url: "https://johnnygainer.bearblog.dev/"
